--- a/nodes/node/node.css
+++ b/nodes/node/node.css
@@ -35,11 +35,12 @@
   position: relative;
 }
 
-.document .content-node .focus-mode.figure:hover, .document .content-node .focus-mode.figure.active {
+
+.document .content-node .focus-mode.figure:hover, .article.figures .document .content-node.active .focus-mode.figure {
   color: rgba(145, 187, 4, 1.0);
 }
 
-.document .content-node .focus-mode.citation:hover, .document .content-node .focus-mode.citation.active {
+.document .content-node .focus-mode.citation:hover, .article.citations .document .content-node.active .focus-mode.citation {
   color: rgba(11, 157, 217, 1);
 }
 
@@ -59,6 +60,15 @@
   display: none;
 }
 
+
+/* The stripe which marks the focussed node
+-------------------------------------------------------------------------------*/
+
+.document .content-node.active .focus .stripe {
+  display: block;
+  opacity: 1;
+}
+
 .document .content-node .focus .stripe {
   opacity: 0;
   position: absolute;
@@ -69,9 +79,6 @@
   background: black;
 }
 
-#container .article .document .content-node.active .focus-mode.node .stripe {
-  background: black;
-}
 
 .document .content-node .focus .arrow {
   position: absolute;
@@ -84,22 +91,22 @@
   border-left: 10px solid black;
 }
 
-.article.figure .content-node.active .focus .focus-mode.figure .arrow {
+.article.figures .content-node.active .focus .focus-mode.figure .arrow {
   border-left: 10px solid rgba(145, 187, 4, 1.0);
   display: block;
 }
 
-.article.citation .content-node.active .focus .focus-mode.citation .arrow {
+.article.citations .content-node.active .focus .focus-mode.citation .arrow {
   border-left: 10px solid rgba(11, 157, 217, 1);
   display: block;
 }
 
-.article.figure .content-node.active .focus .stripe {
+.article.figures .content-node.active .focus .stripe {
   background: rgba(145, 187, 4, 1.0);
   opacity: 1;
 }
 
-.article.citation .content-node.active .focus .stripe {
+.article.citations .content-node.active .focus .stripe {
   background: rgba(11, 157, 217, 1);
 }
 
@@ -110,10 +117,7 @@
 .document .content-node:hover .focus .stripe {
 }
 
-.document .content-node.active .focus .stripe {
-  display: block;
-  opacity: 1;
-}
+
 
 .document .content-node .focus:hover {
 
