--- a/nodes/table/table.css
+++ b/nodes/table/table.css
@@ -1,11 +1,12 @@
 /* Table */ 
 
-.article .resources .content-node.table .table-wrapper {
+.content-node.table .table-wrapper {
   width: 100%;
   overflow: auto;
+  padding: 20px;
 }
 
-.article .resources table {
+.content-node.table table {
   position: relative;
   border-collapse: collapse;
   border-spacing: 0;
@@ -13,30 +14,29 @@
   margin: 0 auto;
 }
 
-.article .resources thead tr {
+.content-node.table thead tr {
   background: #eee;
 }
 
-
-.article .resources thead td {
+.content-node.table thead td {
   font-weight: bold;
 }
 
 /* Table sub tags */
-.article .resources table sub {
+.content-node.table table sub {
    vertical-align: baseline;
    position: relative;
    top: 0.4em;
    font-size: 11px;
 }
 
-.article .resources table td {
+.content-node.table table td {
   padding: 5px;
   font-size: 12px;
   border: 1px solid lightgrey;
 }
 
-.article .resources .table .footers {
+.content-node.table .footers {
   padding: 0 20px;
   padding-top: 10px;
   font-size: 12px;
