--- a/nodes/codeblock/codeblock.css
+++ b/nodes/codeblock/codeblock.css
@@ -7,9 +7,12 @@
 }
 
 .content-node.codeblock .content {
-  font-family: 'Source Code Pro';
-  font-size: 14px;
+  border: 1px dotted #ccc;
+  background: rgba(0,0,0, 0.01);
+  font-family: 'Monaco', 'Source Code Pro', 'Courier New';
+  font-size: 12px;
   color: #777;
+  padding: 10px;
   min-height: 28px;
 }
 
