--- a/nodes/video/video.css
+++ b/nodes/video/video.css
@@ -1,3 +1,5 @@
+
+
 .resources .content-node.video .content video {
   background: #000;
   padding: 10px;
@@ -6,8 +8,8 @@
 }
 
 .resources .content-node.video .content {
-  /* text-align: center; */
   /*background: white;*/
+  /*text-align: center;*/
 }
 
 .resources .content-node.video .content .title {
@@ -24,3 +26,12 @@
   margin-bottom: 0px; /* override default margin of paragraphs */
   background: #fff;
 }
+
+/* Fullscreen overrides */
+
+.resources .content-node.video.fullscreen .content .video-wrapper {
+  background: black;
+  padding: 50px 0;
+  text-align: center;
+}
+
