Citation -> MixedCitation plus other tweaks.

--- a/nodes/article_citation/article_citation.css
+++ b/nodes/article_citation/article_citation.css
@@ -2,6 +2,6 @@
 Citations 
 --------------------------------------- */
 
-.content-node.citation .content > div {
+.content-node.article-citation .content > div {
   padding: 5px 20px;
 }
