--- a/nodes/list/list.css
+++ b/nodes/list/list.css
@@ -6,15 +6,19 @@
   padding-top: 0px;
 }
 
-
-.content-node.list ul {
-  padding: 20px 60px;
-  padding-left: 130px;
+.content-node .listitem {
+  padding: 2px 0px;
+  padding-left: 20px;
+  position: relative;
 }
 
-.content-node.list .paragraph {
-  margin: 0;
-  padding: 0;
+.content-node .listitem .bullet {
+  position: absolute;
+  left: 0px;
+  top: 14px;
+  width: 4px;
+  height: 4px;
+  background: #bbb;
 }
 
 .content-node.list .content {
@@ -25,4 +29,12 @@
 
 .content-node.list .content {
 
+}
+
+.content-node.list.level-2 .content {
+  font-size: 20px;
+}
+
+.content-node.list.level-3 .content {
+  font-size: 17px;
 }
