--- a/nodes/supplement/supplement.css
+++ b/nodes/supplement/supplement.css
@@ -1,25 +1,38 @@
-.content-node.supplement .content {
+.content-node.supplement > .content {
   padding: 10px 20px;
 }
 
-.content-node.supplement .content .files {
+.content-node.supplement .content .file {
+  padding: 20px 0;
+  font-weight: bold;
+  font-size: 16px;
+  
+/*  background: #EBEBEB;
+  margin: 20px 10px;
+  padding: 20px 10px;
+  color: rgba(0,0,0,0.6);
+  text-align: center;*/
+}
+
+/*.content-node.supplement .content .files {
   background: #EBEBEB;
   margin: 20px 10px;
   padding: 20px 10px;
   color: rgba(0,0,0,0.6);
   text-align: center;
-}
+}*/
 
-.content-node.supplement .content .files .file {
+/*.content-node.supplement .content .files .file {
   margin: 5px;
   padding: 10px;
   background: #fff;
   border-radius: 5px;
   display: inline-block;
-}
+}*/
 
 
-.content-node.supplement .content .files .file div {
+/*.content-node.supplement .content .files .file div {
   text-align: center;
   line-height: 20px;
 }
+*/
