Instead of doing magical id normalization, we generate artificial ones and remember the source_id in a separate property.

--- a/article.css
+++ b/article.css
@@ -130,7 +130,7 @@
   margin-top: 50px;
 }
 
-.article .resources .content-node {
+.article .resources .nodes > .content-node {
   color: #333;
   position: relative;
   background: #EBEBEB;
