--- a/nodes/figure/figure.css
+++ b/nodes/figure/figure.css
@@ -2,8 +2,8 @@
 -------------------------------------------------------------------------------*/
 
 .content-node.figure { 
-  padding: 20px 60px;
-  padding-left: 100px;
+/*  padding: 20px 60px;
+  padding-left: 100px;*/
 }
 
 .content-node.figure .content {
