Person nodes and references. Not yet finished.

--- a/article.css
+++ b/article.css
@@ -494,6 +494,12 @@ span.annotation.formula_reference, span.publication_reference {
   cursor: pointer;
 }
 
+.content-node .person_reference {
+  
+  padding: 2px 5px;
+  cursor: pointer;
+}
+
 .content-node .citation_reference { 
   background: rgba(11, 157, 217, 0.075);
   color: #1B6685;
@@ -510,9 +516,11 @@ span.annotation.formula_reference, span.publication_reference {
 /* Hover states */
 .content-node .figure_reference:hover { background-color: rgba(145, 187, 4, 0.35); }
 .content-node .citation_reference:hover { background-color: rgba(11, 157, 217, 0.30); }
+.content-node .person_reference:hover { background-color: rgba(0,0,0, 0.1); }
 
 .content-node .figure_reference.active { background: rgba(145, 187, 4, 0.7); }
 .content-node .citation_reference.active { background: rgba(11, 157, 217, 0.6); }
+.content-node .person_reference.active { background-color: rgba(0,0,0, 0.4); color: white; }
 
 /* Cross Reference */
 .content-node .cross_reference:hover {
