Update image css.

--- a/nodes/image/image.css
+++ b/nodes/image/image.css
@@ -1,7 +1,7 @@
 /* Image Node
 -------------------------------------------------------------------------------*/
 
-/*.content-node.image { 
+.content-node.image { 
   padding: 20px 60px;
   padding-left: 100px;
 }
@@ -15,10 +15,10 @@
 .content-node.image div.image-char {
   text-align: center;
   padding-bottom: 20px;
-}*/
+}
 
-/*.content-node.image div.image-char img {
-  
+.content-node.image div.image-char img {
+  width: 100%;
 }
 
 .content-node.image > .content {
@@ -36,20 +36,4 @@
 
 .content-node.image div img.large {
   display: none;
-}*/
-
-/* Full screen Mode */
-
-/*.content-node.image.fullscreen div img.medium {
-  display: none;
 }
-
-.content-node.image.fullscreen div img.large {
-  width: 100%;
-  display: block;
-}
-
-.content-node.image.fullscreen .paragraph .content {
-  padding: 20px 50px;
-  background: #fff;
-}*/
