--- a/nodes/cover/cover.css
+++ b/nodes/cover/cover.css
@@ -33,8 +33,9 @@
   float: left;
   padding: 0px;
   margin: 0px;
-  margin-right: 20px;
-  margin-bottom: 10px;
+  font-size: 20px;
+  margin-right: 10px;
+  margin-bottom: 8px;
   /*background: blue;*/
   color: rgba(255,255,255, 0.7);
 }
