Adding rich paragraphs and inline formulas.

--- a/nodes/formula/formula.css
+++ b/nodes/formula/formula.css
@@ -3,6 +3,7 @@
   /*padding-right: 60px;*/
   padding-left: 100px;
   min-height: 80px;
+  text-align: center;
 }
 
 .document .content-node.formula .label {
