--- a/nodes/richparagraph/richparagraph.css
+++ b/nodes/richparagraph/richparagraph.css
@@ -2,23 +2,23 @@
   padding-left: 100px;
 }
 
-.document .content-node.richparagraph .content-node.paragraph {
+.content-node.richparagraph .content-node.paragraph {
   padding: 0px;
   display:inline;
   width: auto;
 }
 
-.document .content-node.richparagraph .content-node.paragraph div {
+.content-node.richparagraph .content-node.paragraph div {
   display:inline;
   width: auto;
 }
 
-.document .content-node.richparagraph .content-node.image div img {
+.content-node.richparagraph .content-node.image div img {
   display:inline;
   width: auto;
 }
 
-.document .content-node.richparagraph .content-node.formula.inline {
+.content-node.richparagraph .content-node.formula.inline {
   display: inline;
   padding: 0px;
 }
