--- a/nodes/paragraph/paragraph.css
+++ b/nodes/paragraph/paragraph.css
@@ -1,11 +1,29 @@
 /* Paragraph Node
 -------------------------------------------------------------------------------*/
 
-.content-node.paragraph {
-  padding: 20px 0px;
+.document .content-node.paragraph {
+  /*padding-left: 100px;*/
+  padding: 20px 60px 20px 100px;
+  /*padding-left: 100px;*/
 }
 
-.content-node.paragraph .content {
-  min-height: 28px;
+.content-node.paragraph .content-node.text {
+  padding: 0px;
+  display:inline;
+  width: auto;
 }
 
+.content-node.paragraph .content-node.text div {
+  display:inline;
+  width: auto;
+}
+
+.content-node.paragraph .content-node.image div img {
+  display:inline;
+  width: auto;
+}
+
+.content-node.paragraph .content-node.formula.inline {
+  display: inline;
+  padding: 0px;
+}
