--- a/nodes/list/list.css
+++ b/nodes/list/list.css
@@ -2,11 +2,18 @@
 -------------------------------------------------------------------------------*/
 
 .content-node.list {
-  padding: 10px 0px;
-  padding-top: 0px;
+/*  padding: 10px 0px;
+  padding-top: 0px;*/
+  padding: 20px 60px;
+  padding-left: 100px;
 }
 
-.content-node .listitem {
+.content-node.list .content-node {
+  padding: 0;
+  margin: 0;
+}
+
+.content-node.list .listitem {
   padding: 2px 0px;
   padding-left: 20px;
   position: relative;
