--- a/article.css
+++ b/article.css
@@ -334,6 +334,36 @@
   display: block;
 }
 
+.article.info .resources .resource-view.info #articleinfo {
+  background: white;
+  padding: 20px;
+}
+
+.article.info .resources .resource-view.info #articleinfo .content > .content-node {
+  display: block;
+  /*display: block;*/
+  /*background: #ccc;*/
+}
+
+.article.info .resources .resource-view.info #articleinfo .content > .content-node.paragraph {
+  display: block;
+  padding-top: 0px;
+  /*display: block;*/
+  /*background: #ccc;*/
+}
+
+.article.info .resources .resource-view.info #articleinfo .content-node.heading .content {
+  font-size: 14px;
+  color: #444;
+  padding-bottom: 10px;
+  /*background: green;*/
+  /*display: block;*/
+  /*background: #ccc;*/
+}
+
+.article.info .resources .resource-view.info #articleinfo {
+
+}
 
 /* Consistent Resource Header for figures captions and person cards 
 ----------------------------------------------------------------------- */
