--- a/nodes/caption/caption.css
+++ b/nodes/caption/caption.css
@@ -2,3 +2,7 @@
   font-weight: bold;
   font-size: 16px;
 }
+
+.content-node.caption > .content > .content-node.paragraph {
+  padding-bottom: 20px;
+}
