--- a/nodes/person/person.css
+++ b/nodes/person/person.css
@@ -2,16 +2,16 @@
 Person 
 --------------------------------------- */
 
-.content-node.person .content {
+.lens-article .content-node.person .content {
   /*padding: 20px;*/
 }
 
-.content-node.person .affiliation {
+.lens-article .content-node.person .affiliation {
   margin-top: 10px;
   font-size: 17px;
 }
 
-.content-node.person .label {
+.lens-article .content-node.person .label {
   margin-top: 10px;
   color: #777;
 }
