--- a/nodes/caption/caption.css
+++ b/nodes/caption/caption.css
@@ -1,8 +1,8 @@
-.content-node.caption .caption-title {
+.lens-article .content-node.caption .caption-title {
   font-weight: bold;
   font-size: 16px;
 }
 
-.content-node.caption > .content > .content-node.paragraph {
+.lens-article .content-node.caption > .content > .content-node.paragraph {
   padding-bottom: 20px;
 }
