--- a/nodes/citation/citation.css
+++ b/nodes/citation/citation.css
@@ -2,16 +2,11 @@
 Citations 
 --------------------------------------- */
 
-.content-node.citation .content .authors {
-  /*padding-top: 20px;*/
+.lens-article .content-node.citation .content .authors {
   font-size: 17px;
 }
 
-.content-node.citation .content .source {
+.lens-article .content-node.citation .content .source {
   color: #777;
   padding-top: 20px;
-}
-
-.content-node.citation .content > div {
-  /*padding: 10px 20px;*/
 }
