--- a/nodes/publication_info/publication_info.css
+++ b/nodes/publication_info/publication_info.css
@@ -2,16 +2,17 @@
 
 .lens-article .content-node.publication-info {
   /*padding: 30px 0;*/
-  background: #EBEBEB;
+  /*background: rgba(0,0,0,0.1);*/
   color: #333;
 }
 
 .lens-article .content-node.publication-info .content {
-  background: #EBEBEB;
+  /*background: #EBEBEB;*/
+  background: rgba(0,0,0,0.01);
 }
 
 .lens-article .content-node.publication-info table {
-  padding: 30px 0;
+  padding: 10px 0;
   border: none;
   width: 100%;
 }
