--- a/nodes/video/video.css
+++ b/nodes/video/video.css
@@ -1,6 +1,7 @@
 .resources .content-node.video .video-wrapper {
   background: black;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .resources .content-node.video .content video {
@@ -14,6 +15,8 @@
 
 .resources .content-node.video.fullscreen .content .video-wrapper {
   background: black;
+
   padding: 50px 0;
   text-align: center;
+  
 }
