--- a/nodes/cover/cover.css
+++ b/nodes/cover/cover.css
@@ -1,6 +1,6 @@
 .lens-article .content-node.cover {
-  background: #5c6570;
-  color: white;
+  /*background: #5c6570;*/
+  color: rgba(0,0,0,0.8);
 }
 
 .lens-article .content-node.cover .content {
@@ -15,7 +15,7 @@
 
 .lens-article .content-node.cover .content .authors {
   padding-top: 30px;
-  color: rgba(255,255,255, 0.7);
+  /*color: rgba(255,255,255, 0.7);*/
   overflow: auto;
 }
 
@@ -27,5 +27,5 @@
   font-size: 20px;
   margin-right: 10px;
   margin-bottom: 8px;
-  color: rgba(255,255,255, 0.7);
+  /*color: rgba(255,255,255, 0.7);*/
 }
