--- a/nodes/cover/cover.css
+++ b/nodes/cover/cover.css
@@ -6,7 +6,9 @@
   font-size: 14px;
   margin-top: 20px;
   margin-bottom: 20px;
-  overflow: auto;
+
+  /* Prevent from nasty scrollbars that appear when eLife logo is shown */
+  overflow: hidden;
 }
 
 .lens-article .content-node.cover .breadcrumbs a {
