Display group members for person groups.

--- a/nodes/publication_info/publication_info.css
+++ b/nodes/publication_info/publication_info.css
@@ -16,6 +16,10 @@
   width: 100%;
 }
 
+.lens-article .content-node.publication-info .label {
+  color: #666;
+}
+
 .lens-article .content-node.publication-info .label.links {
   padding-right: 30px;
 }
@@ -56,7 +60,8 @@
 }
 
 .lens-article .content-node.publication-info .value {
-  font-weight: bold;
+  /*font-weight: bold;*/
+  font-style: italic;
   font-size: 15px;
 }
 
